speed ci tests 1. random shuffle ci tests 2. clone proto file at prepare stage 3. set MAVEN_OPTS